# shop_educational

./: .env-example  .gitignore  Makefile  README.md  Readme.md  alembic.ini  alembic_test.ini  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt
db/: __init__.py
migration/: env.py
migration/versions/: 2025092209_initial.py  2026_02_03_1550-5546ad9a8231_initial.py  2026_02_03_1617-2d692f58c793_.py  2026_02_03_1630-47a30db0b36a_.py  2026_02_05_1059-07ff32d52882_models.py  2026_02_05_1659-ede40ca1cd98_default.py  2026_02_05_1746-75d5089c98f0_unique_constraint.py  2026_02_05_1818-7515e365cbad_add_quantity.py  2026_02_08_0928-dbb93afb2b98_.py
migration/versions/data/: 2026_02_08_1256-7228fdf2572b_.py
migration/versions/schema/: 2026_02_08_1300-base.py
service/: Dockerfile  __main__.py  config.py  db_accessors.py  exceptions.py  http_exceptions.py  requirements.txt  schemas.py  utils.py
service/db_setup/: db_settings.py  models.py
service/endpoints/: data_handlers.py  put_handlers.py  update_handlers.py
tests/: conftest.py  fixtures.py  test_db_accessors.py  test_handlers.py
